full syntax test coverage + ашч ызусшашсфешщт